# furniture-shop-Refund

./: .env.example  .gitignore  .prettierignore  .ruff.toml  AGENTS.md  README.md  docker-compose.yml  start-backend.bat
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  refund_service.db  requirements.txt  setup.py  test_main.py
backend/alembic/: env.py
backend/alembic/versions/: 13ac4542ed0b_initial_tables.py
backend/src/: __init__.py  auth.py  cache.py  config.py  database.py  main.py
backend/src/api/: admin_endpoints.py  agent_auth.py  refund_endpoints.py  router.py  support_endpoints.py
backend/src/api/endpoints/: auth.py  refund_approval.py  refund_cases.py  support_cases.py
backend/src/application/services/: delivery_window_validator_service.py  refund_approval_service.py  refund_calculation_service.py  refund_execution_service.py  support_case_service.py
backend/src/application/use_cases/: create_refund_case.py  create_support_case.py  get_support_case.py  update_support_case_status.py
backend/src/config/: settings.py
backend/src/database/: session.py
backend/src/domain/aggregates/: refund_case_aggregate.py  support_case_aggregate.py
backend/src/domain/entities/: __init__.py  customer.py  order_reference.py  refund_case.py  refund_case_domain.py  refund_item.py  support_agent.py  support_case.py
backend/src/domain/mappers/: refund_case_mapper.py
backend/src/domain/repositories/: refund_case_repository.py  support_case_repository.py
backend/src/domain/value_objects/: case_status.py  delivery_window_validator.py  money.py  refund_status.py
backend/src/infrastructure/auth/: auth_middleware.py  jwt.py
backend/src/infrastructure/cache/: redis_client.py
backend/src/infrastructure/config/: config.py
backend/src/infrastructure/database/: database.py
backend/src/infrastructure/errors/: exceptions.py
backend/src/infrastructure/logging/: logger.py
backend/src/middleware/: auth.py  exceptions.py
backend/src/models/: base_models.py  refund_case.py  refund_eligibility.py  support_agent.py  support_case.py
backend/src/repositories/: agent_repository.py  base_repository.py  refund_repository.py  support_repository.py
backend/src/schemas/: refund_case.py  refund_case_admin.py  support_case.py
backend/src/services/: agent_service.py  refund_case_service.py  refund_service.py  support_case_service.py  support_service.py
backend/src/utils/: auth.py  cache.py  logging.py
backend/tests/: test_example.py
backend/tests/contract/: test_refund_approval.py  test_refund_case_creation.py  test_refund_cases.py  test_refund_rejection.py  test_support_case_creation.py  test_support_cases.py
backend/tests/integration/: test_refund_approval.py  test_refund_cases.py  test_refund_request.py  test_support_case_creation.py  test_support_cases.py
backend/tests/unit/: test_models.py  test_refund_case_model.py  test_refund_case_service.py  test_refund_eligibility.py  test_support_case_model.py  test_support_case_service.py
backend/tests/unit/domain/: test_delivery_validation.py  test_refund_calculation.py
docs/: api-overview.md
frontend/: .dockerignore  Dockerfile  (+7 more)
refund-service/: .ruff.toml  Dockerfile  pyproject.toml  requirements.txt
refund-service/data/: refund.db
refund-service/src/: __init__.py  run.py
refund-service/src/data/: refund.db
refund-service/src/domain/: refund.py  refund_case.py  refund_decision.py  refund_request.py  refund_response.py
refund-service/src/domain/events/: create_refund_request.py  create_refund_response.py  refund_created.py  refund_decision_taken.py  refund_processing_started.py
refund-service/src/domain/services/: eligibility_service.py  refund_calculation_service.py
refund-service/src/domain/value_objects/: money.py  refund_decision.py  refund_eligibility.py
refund-service/src/infrastructure/: config.py  logging_config.py
refund-service/src/infrastructure/database/: __init__.py  database_config.py  schema.py
refund-service/src/infrastructure/logging/: logger.py
refund-service/src/infrastructure/middleware/: README.md  auth.py  error_handler.py
refund-service/src/infrastructure/repositories/: refund_case_repository.py  refund_request_repository.py  refund_response_repository.py
refund-service/src/presentation/: dependencies.py  main.py  refund_cases.py  refund_requests.py
(+140 files in other folders)
