[tool.poetry]
name = "support-refund-service"
version = "0.1.0"
description = "Customer Support and Refund Service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^1.4.45"
pydantic = "^2.12.5"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^23.12.1"
ruff = "^0.1.6"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
